@@ -1,6 +1,7 @@
 /* Pascal language support routines for GDB, the GNU debugger.
 
-   Copyright (C) 2000-2013 Free Software Foundation, Inc.
+   Copyright (C) 2000, 2002, 2003, 2004, 2005, 2007, 2008, 2009, 2010
+   Free Software Foundation, Inc.
 
    This file is part of GDB.
 
@@ -30,12 +31,12 @@
 #include "valprint.h"
 #include "value.h"
 #include <ctype.h>
-
+ 
 extern void _initialize_pascal_language (void);
 
 
 /* All GPC versions until now (2007-09-27) also define a symbol called
-   '_p_initialize'.  Check for the presence of this symbol first.  */
+   '_p_initialize'. Check for the presence of this symbol first.  */
 static const char GPC_P_INITIALIZE[] = "_p_initialize";
 
 /* The name of the symbol that GPC uses as the name of the main
@@ -53,7 +54,7 @@ static const char GPC_MAIN_PROGRAM_NAME_2[] = "pascal_main_program";
    so that it finds the even if the program was compiled
    without debugging information.
    According to information supplied by Waldeck Hebisch,
-   this should work for all versions posterior to June 2000.  */
+   this should work for all versions posterior to June 2000. */
 
 const char *
 pascal_main_name (void)
@@ -98,17 +99,15 @@ int
 is_pascal_string_type (struct type *type,int *length_pos,
                        int *length_size, int *string_pos,
 		       struct type **char_type,
-		       const char **arrayname)
+		       char **arrayname)
 {
   if (type != NULL && TYPE_CODE (type) == TYPE_CODE_STRUCT)
     {
       /* Old Borland type pascal strings from Free Pascal Compiler.  */
       /* Two fields: length and st.  */
-      if (TYPE_NFIELDS (type) == 2
-	  && TYPE_FIELD_NAME (type, 0)
-	  && strcmp (TYPE_FIELD_NAME (type, 0), "length") == 0
-	  && TYPE_FIELD_NAME (type, 1)
-	  && strcmp (TYPE_FIELD_NAME (type, 1), "st") == 0)
+      if (TYPE_NFIELDS (type) == 2 
+          && strcmp (TYPE_FIELDS (type)[0].name, "length") == 0 
+          && strcmp (TYPE_FIELDS (type)[1].name, "st") == 0)
         {
           if (length_pos)
 	    *length_pos = TYPE_FIELD_BITPOS (type, 0) / TARGET_CHAR_BIT;
@@ -119,16 +118,14 @@ is_pascal_string_type (struct type *type,int *length_pos,
           if (char_type)
 	    *char_type = TYPE_TARGET_TYPE (TYPE_FIELD_TYPE (type, 1));
  	  if (arrayname)
-	    *arrayname = TYPE_FIELD_NAME (type, 1);
+	    *arrayname = TYPE_FIELDS (type)[1].name;
          return 2;
         };
       /* GNU pascal strings.  */
       /* Three fields: Capacity, length and schema$ or _p_schema.  */
       if (TYPE_NFIELDS (type) == 3
-	  && TYPE_FIELD_NAME (type, 0)
-	  && strcmp (TYPE_FIELD_NAME (type, 0), "Capacity") == 0
-	  && TYPE_FIELD_NAME (type, 1)
-	  && strcmp (TYPE_FIELD_NAME (type, 1), "length") == 0)
+          && strcmp (TYPE_FIELDS (type)[0].name, "Capacity") == 0
+          && strcmp (TYPE_FIELDS (type)[1].name, "length") == 0)
         {
 	  if (length_pos)
 	    *length_pos = TYPE_FIELD_BITPOS (type, 1) / TARGET_CHAR_BIT;
@@ -136,16 +133,15 @@ is_pascal_string_type (struct type *type,int *length_pos,
 	    *length_size = TYPE_LENGTH (TYPE_FIELD_TYPE (type, 1));
 	  if (string_pos)
 	    *string_pos = TYPE_FIELD_BITPOS (type, 2) / TARGET_CHAR_BIT;
-          /* FIXME: how can I detect wide chars in GPC ??  */
+          /* FIXME: how can I detect wide chars in GPC ?? */
           if (char_type)
 	    {
 	      *char_type = TYPE_TARGET_TYPE (TYPE_FIELD_TYPE (type, 2));
-
 	      if (TYPE_CODE (*char_type) == TYPE_CODE_ARRAY)
 		*char_type = TYPE_TARGET_TYPE (*char_type);
 	    }
  	  if (arrayname)
-	    *arrayname = TYPE_FIELD_NAME (type, 2);
+	    *arrayname = TYPE_FIELDS (type)[2].name;
          return 3;
         };
     }
@@ -156,12 +152,15 @@ static void pascal_one_char (int, struct ui_file *, int *);
 
 /* Print the character C on STREAM as part of the contents of a literal
    string.
-   In_quotes is reset to 0 if a char is written with #4 notation.  */
+   In_quotes is reset to 0 if a char is written with #4 notation */
 
 static void
 pascal_one_char (int c, struct ui_file *stream, int *in_quotes)
 {
-  if (c == '\'' || ((unsigned int) c <= 0xff && (PRINT_LITERAL_FORM (c))))
+
+  c &= 0xFF;			/* Avoid sign bit follies */
+
+  if ((c == '\'') || (PRINT_LITERAL_FORM (c)))
     {
       if (!(*in_quotes))
 	fputs_filtered ("'", stream);
@@ -187,13 +186,12 @@ static void pascal_emit_char (int c, struct type *type,
 
 /* Print the character C on STREAM as part of the contents of a literal
    string whose delimiter is QUOTER.  Note that that format for printing
-   characters and strings is language specific.  */
+   characters and strings is language specific. */
 
 static void
 pascal_emit_char (int c, struct type *type, struct ui_file *stream, int quoter)
 {
   int in_quotes = 0;
-
   pascal_one_char (c, stream, &in_quotes);
   if (in_quotes)
     fputs_filtered ("'", stream);
@@ -203,7 +201,6 @@ void
 pascal_printchar (int c, struct type *type, struct ui_file *stream)
 {
   int in_quotes = 0;
-
   pascal_one_char (c, stream, &in_quotes);
   if (in_quotes)
     fputs_filtered ("'", stream);
@@ -225,11 +222,7 @@ pascal_printstr (struct ui_file *stream, struct type *type,
   unsigned int things_printed = 0;
   int in_quotes = 0;
   int need_comma = 0;
-  int width;
-
-  /* Preserve TYPE's original type, just set its LENGTH.  */
-  check_typedef (type);
-  width = TYPE_LENGTH (type);
+  int width = TYPE_LENGTH (type);
 
   /* If the string was not truncated due to `set print elements', and
      the last byte of it is a null, we don't print that, in traditional C
@@ -267,7 +260,7 @@ pascal_printstr (struct ui_file *stream, struct type *type,
 
       rep1 = i + 1;
       reps = 1;
-      while (rep1 < length
+      while (rep1 < length 
 	     && extract_unsigned_integer (string + rep1 * width, width,
 					  byte_order) == current_char)
 	{
@@ -279,7 +272,10 @@ pascal_printstr (struct ui_file *stream, struct type *type,
 	{
 	  if (in_quotes)
 	    {
-	      fputs_filtered ("', ", stream);
+	      if (options->inspect_it)
+		fputs_filtered ("\\', ", stream);
+	      else
+		fputs_filtered ("', ", stream);
 	      in_quotes = 0;
 	    }
 	  pascal_printchar (current_char, type, stream);
@@ -292,7 +288,10 @@ pascal_printstr (struct ui_file *stream, struct type *type,
 	{
 	  if ((!in_quotes) && (PRINT_LITERAL_FORM (current_char)))
 	    {
-	      fputs_filtered ("'", stream);
+	      if (options->inspect_it)
+		fputs_filtered ("\\'", stream);
+	      else
+		fputs_filtered ("'", stream);
 	      in_quotes = 1;
 	    }
 	  pascal_one_char (current_char, stream, &in_quotes);
@@ -302,7 +301,12 @@ pascal_printstr (struct ui_file *stream, struct type *type,
 
   /* Terminate the quotes if necessary.  */
   if (in_quotes)
-    fputs_filtered ("'", stream);
+    {
+      if (options->inspect_it)
+	fputs_filtered ("\\'", stream);
+      else
+	fputs_filtered ("'", stream);
+    }
 
   if (force_ellipses || i < length)
     fputs_filtered ("...", stream);
@@ -368,7 +372,6 @@ pascal_language_arch_info (struct gdbarch *gdbarch,
 			   struct language_arch_info *lai)
 {
   const struct builtin_type *builtin = builtin_type (gdbarch);
-
   lai->string_char_type = builtin->builtin_char;
   lai->primitive_type_vector
     = GDBARCH_OBSTACK_CALLOC (gdbarch, nr_pascal_primitive_types + 1,
@@ -417,6 +420,7 @@ const struct language_defn pascal_language_defn =
   "pascal",			/* Language name */
   language_pascal,
   range_check_on,
+  type_check_on,
   case_sensitive_on,
   array_row_major,
   macro_expansion_no,
@@ -431,7 +435,6 @@ const struct language_defn pascal_language_defn =
   pascal_print_typedef,		/* Print a typedef using appropriate syntax */
   pascal_val_print,		/* Print a value using appropriate syntax */
   pascal_value_print,		/* Print a top-level value */
-  default_read_var_value,	/* la_read_var_value */
   NULL,				/* Language specific skip_trampoline */
   "this",		        /* name_of_this */
   basic_lookup_symbol_nonlocal,	/* lookup_symbol_nonlocal */
@@ -447,8 +450,6 @@ const struct language_defn pascal_language_defn =
   default_print_array_index,
   default_pass_by_reference,
   default_get_string,
-  NULL,				/* la_get_symbol_name_cmp */
-  iterate_over_symbols,
   LANG_MAGIC
 };
 
